updated the content

--- a/src/men.html
+++ b/src/men.html
@@ -1,7 +1,7 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Best Sellers | Stores"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Men"}'>
 </include>
 
-<section class="sub-page-header-section img-bg">
+<section id="men-block" class="sub-page-header-section img-bg">
     <include src="src/layouts/main-header.html"></include>
 
     <div class="bg-img-wrapper">
@@ -10,12 +10,12 @@
 
     <div class="bg-img-text-block container text-center">
         <h1 class="font-weight-bold mb-4">Men</h1>
-        <h4 class="mb-5">Whether its office wear, casual wear or sports wear. Get the top deals on everything you want.</h4>
+        <h4 class="mb-5">Whether its office wear, casual wear or sports wear. Get the best deals on everything you want.</h4>
         <a href="stores.html" class="mp-btn">Store directory</a>
     </div>
 </section>
 
-<section id="men-block" class="stores-section overflow-x-hidden">
+<section class="stores-section overflow-x-hidden">
 
     <div class="category-block">
 
