--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -8,7 +8,7 @@
     <include src="src/layouts/main-header.html"></include>
     <div class="container text-center">
         <h1 class="font-weight-bold mp-text-dark-blue mb-4 ">Installments with Mintpay</h1>
-        <h4>Entice customers with convenience and control of their spending. Experience the benefits of a larger customer base, an increase in average order size as well as a strong competitive advantage.</h4>
+        <h4>Entice customers with convenience and more control of their spending. Experience the benefits of a larger customer base, an increase in average order size as well as a strong competitive advantage.</h4>
     </div>
 </section>
 
@@ -22,7 +22,7 @@
                 </h2>
                 <h2 class="mp-text-dark-blue d-lg-none mb-4 font-weight-semibold">Give your customers the freedom they
                     deserve</h2>
-                <h4 class="pe-lg-5">Enable your customers to build the life they want. Provide them with the luxury of handling their expenses to suit their needs, with flexibility and confidence.</h4>
+                <h4 class="pe-lg-5">Enable your customers to build the life they want. Provide them with the luxury of managing their expenses to suit their needs, with flexibility and confidence.</h4>
             </div>
             <div class="col-12 col-lg-6">
                 <div class="img-wrapper justify-content-lg-end">
@@ -59,7 +59,7 @@
             <div class="col-12 col-sm-6 col-lg-3 step-item">
                 <img class="mb-4" src="assets/img/wallet.svg" alt="">
                 <h4 class="mb-3">Step 04:<span> Payment</span></h4>
-                <p>Customer pays off their purchase in monthly installments.</p>
+                <p>Customer pays off their purchase in 2 monthly installments.</p>
             </div>
         </div>
     </div>
