--- a/src/press.html
+++ b/src/press.html
@@ -1,4 +1,4 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Support"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Media release"}'>
 </include>
 
 <section class="sub-page-header-section gray-bg">
