--- a/src/stores.html
+++ b/src/stores.html
@@ -8,7 +8,7 @@
     <include src="src/layouts/main-header.html"></include>
     <div class="container text-center">
         <h1 class="font-weight-bold mp-text-dark-blue mb-4">Shop Now with Mintpay.</h1>
-        <h4>It does not get much better than this. All your favourite brands under one roof at Mintpay! Whether you are online shopping for jewellery, jumpsuits or just online dress shopping in general, you can now enjoy buying anything your heart desires with ease.</h4>
+        <h4>It doesn't get much better than this. All your favourite brands under one roof at Mintpay! Whether you are online shopping for jewellery, jumpsuits or just online dress shopping in general, you can now enjoy buying anything your heart desires with ease.</h4>
     </div>
 </section>
 
@@ -102,7 +102,7 @@
     <div class="category-block">
         <div class="container">
             <div class="category-block__title">Women</div>
-            <p>Ladies, take advantage of the selection we have on offer, pay overtime and get your hands on the outfits you have been eyeing all year long!</p>
+            <p>Ladies, take advantage of the selection we have on offer, pay over time and get your hands on the outfits you have been eyeing all year long!</p>
         </div>
 
         <div class="continer-fluid mt-5">
@@ -164,7 +164,7 @@
     <div class="category-block">
         <div class="container">
             <div class="category-block__title">Men</div>
-            <p>Whether its office wear, casual wear or sports wear. Get the top deals on everything you want.</p>
+            <p>Whether its office wear, casual wear or sports wear. Get the best deals on everything you want.</p>
         </div>
 
         <div class="continer-fluid mt-5">
@@ -223,9 +223,9 @@
         </div>
     </div>
 
-    <div class="category-block">
+    <div id="beauty-block" class="category-block">
         <div class="container">
-            <div id="beauty-block" class="category-block__title">Beauty &amp; Fragrance</div>
+            <div class="category-block__title">Beauty &amp; Fragrance</div>
             <p>From skin care, facial care to cosmetic products, here's eveything you need for that glow up.</p>
         </div>
 
@@ -274,10 +274,10 @@
         </div>
     </div>
 
-    <div class="category-block">
+    <div id="jewellery-block" class="category-block">
         <div class="container">
-            <div id="jewellery-block" class="category-block__title">Jewellery &amp; Accessories</div>
-            <p>Whether you need the perfect set of earrings, a bracelet design or a ring design coordinated, here are some stylish and intricate designs to meet your desire.</p>
+            <div class="category-block__title">Jewellery &amp; Accessories</div>
+            <p>Whether you need the perfect set of earrings, a bracelet design or a ring design developed, you can find some of the most stylish & intricate options right here.</p>
         </div>
 
         <div class="continer-fluid mt-5">
