--- a/src/support.html
+++ b/src/support.html
@@ -1,12 +1,12 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Support"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Support"}'>
 </include>
 
 <section class="sub-page-header-section green-bg">
     <include src="src/layouts/main-header.html"></include>
     <div class="container text-center">
         <h1 class="font-weight-bold mp-text-dark-blue mb-4 ">How can we help you?</h1>
-        <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, laudantium asperiores temporibus in dolor
-            repellendus quasi aliquid vel suscipit aspernatur.</h4>
+        <h4>We are always here to help.</h4>
+        <h4>For any support inquiries, please reach out to <a href="mailto:support@mintpay.lk">support@mintpay.lk</a></h4>
     </div>
 </section>
 
@@ -74,8 +74,7 @@
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                         data-bs-parent="#q-block-one">
                         <div class="accordion-body">
-                            <p>At Mintpay we love helping our customers plan, buy and pay goods that you need without
-                                losing control of your money. You have the flexibility to use any card (debit or credit) from any bank and there is no interest, no hiiden fee or no processing fee. You pay what you see.</p>
+                            <p>At Mintpay we love helping our customers plan, buy and pay for goods that they need without losing control of their money. You have the flexibility to use any card (debit or credit) from any bank. There are no interest fees, no hidden fees and no processing fees. You pay what you see.</p>
                         </div>
                     </div>
                 </div>
@@ -134,9 +133,7 @@
                     <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve"
                         data-bs-parent="#q-block-two">
                         <div class="accordion-body">
-                            <p>When you place an order through Mintpay, you will be required to add a debit or credit card.
-                                Your installment amount will be deducted from your respective debit or credit card on due
-                                date.</p>
+                            <p>When you place an order through Mintpay, you will be required to add a debit or credit card. Your installment amount will be deducted from your respective debit or credit card on the due dates.</p>
                         </div>
                     </div>
                 </div>
@@ -150,11 +147,11 @@
                     <div id="collapseThirteen" class="accordion-collapse collapse" aria-labelledby="headingThirteen"
                         data-bs-parent="#q-block-two">
                         <div class="accordion-body">
-                            <p>As part of Mintpay's effort to advocate responsible spending, there may ba a limit on the amount you can spend.</p>
+                            <p>As part of Mintpay's effort to advocate responsible spending, there may be a limit on the amount you can spend.</p>
 
-                            <p>What we can recommend is you can try to purchase a lower ticket price item with Mintpay first. As good repayment behaviuor is always rewarded with increase limit, the more you use Mintpay, the more likely you will be able to spend more.</p>
+                            <p>What we can recommend is that you try to purchase a lower ticket price item with Mintpay first. As good repayment behaviour is always rewarded with an increased limit, the more you use Mintpay, the more likely you will be able to spend more.</p>
 
-                            <p>In the event of you purchasing someing more than your limit, you can pay the difference upfront and spread the rest across 2 months period.</p>
+                            <p>In the event of you purchase something that is above your limit, you can pay the difference upfront and spread the rest across 2 months period.</p>
                         </div>
                     </div>
                 </div>
@@ -184,8 +181,7 @@
                     <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven"
                         data-bs-parent="#q-block-two">
                         <div class="accordion-body">
-                            <p>Mintpay is committed to making sure you stick to your repayment plan. We will send you
-                                reminders closer to your payment due dates.</p>
+                            <p>Mintpay is committed to making sure you stick to your repayment plan. We will send you reminders closer to your payment due dates.</p>
 
                             <p>However, if you do miss to pay, we will immediately stop you from making any further
                                 purchase through Mintpay and you will incur a late fee of Rs 500/- per missed payment.
@@ -263,11 +259,7 @@
                     <div id="collapseEleven" class="accordion-collapse collapse" aria-labelledby="headingEleven"
                         data-bs-parent="#q-block-four">
                         <div class="accordion-body">
-                            <p>Mintpay aids you to have better control over your finance. However, the deilvery and
-                                quality of the goods and services you buy is always the responsibility of the retailer.
-                                This means that you need to get in touch with the retailer if a delivery is taking
-                                longer or something is missing or damaged. This also means that once an order is
-                                approved, only the retailer can change the order.</p>
+                            <p>Mintpay aids you to have better control over your finance. However, the delivery and quality of the goods and services you buy is always the responsibility of the retailer. This means that you need to get in touch with the retailer if a delivery is taking longer or something is missing or damaged. This also means that once an order is approved, only the retailer can change the order.</p>
                         </div>
                     </div>
                 </div>
