--- a/src/women.html
+++ b/src/women.html
@@ -1,7 +1,7 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Best Sellers | Stores"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Women"}'>
 </include>
 
-<section class="sub-page-header-section img-bg">
+<section id="women-block"  class="sub-page-header-section img-bg">
     <include src="src/layouts/main-header.html"></include>
 
     <div class="bg-img-wrapper">
@@ -10,12 +10,12 @@
 
     <div class="bg-img-text-block container text-center">
         <h1 class="font-weight-bold mb-4">Women</h1>
-        <h4 class="mb-5">Ladies, take advantage of the selection we have on offer, pay overtime and get your hands on the outfits you have been eyeing all year long!</h4>
+        <h4 class="mb-5">Ladies, take advantage of the selection we have on offer, pay over time and get your hands on the outfits you have been eyeing all year long!</h4>
         <a href="stores.html" class="mp-btn">Store directory</a>
     </div>
 </section>
 
-<section id="women-block" class="stores-section overflow-x-hidden">
+<section class="stores-section overflow-x-hidden">
 
     <div class="category-block">
 
