--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                     </figure>
                 </div>
                 <div class="hero-section text-center text-md-start mt-5 mt-md-0">
-                    <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5">The new way of paying is here! Pay in 3 installments with 0% interest over period of 2 months.</h4>
+                    <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5">The new way of paying is here! Pay in 3 installments with 0% interest over a period of 2 months.</h4>
                     <a class="mp-btn" href="stores.html">Shop now</a>
                 </div>
             </div>
@@ -59,7 +59,7 @@
     <div class="container">
         <div class="header-text-block text-center">
             <h2 class="mp-text-dark-blue mb-4" data-aos="fade-down">How it works</h2>
-            <h4 data-aos="fade-down">3 interest-free installments with either debit or credit cards. 
+            <h4 data-aos="fade-down">3 interest-free installments with either a debit or credit card. 
             </h4>
         </div>
 
@@ -68,18 +68,18 @@
                 data-aos-duration="1000">
                 <img class=" mb-lg-4" src="assets/img/how-it-works-1.png" alt="">
                 <h3 class="step-no mb-2">01.</h3>
-                <h5 class="px-sm-4">Add your favourites to the cart and select Mintpay as the payment option at the checkout.</h5>
+                <h5 class="px-sm-4">Add your favourite items to the cart and select Mintpay as the payment option at the checkout.</h5>
             </div>
             <div class="col-12 col-lg-4 mb-5 mb-lg-0" data-aos="flip-left" data-aos-offset="200"
                 data-aos-duration="1000">
                 <img class="mb-lg-4" src="assets/img/how-it-works-2.png" alt="">
                 <h3 class="step-no mb-2">02.</h3>
-                <h5 class="px-sm-4">Your purchase is split into 3 installments. Pay only the first installment at the point of purchase.</h5>
+                <h5 class="px-sm-4">Your purchase is split into 3 installments. Just pay the first installment to complete the checkout process.</h5>
             </div>
             <div class="col-12 col-lg-4" data-aos="flip-left" data-aos-offset="300" data-aos-duration="1000">
                 <img class="mb-lg-4" src="assets/img/how-it-works-3.png" alt="">
                 <h3 class="step-no mb-2">03.</h3>
-                <h5 class="px-sm-4">Get your order first and the remaining will be automatically charged from your card on the due dates.</h5>
+                <h5 class="px-sm-4">Your order is on the way! The remaining 2 installments will automatically be charged from your card on their due dates.</h5>
             </div>
         </div>
     </div>
@@ -118,8 +118,7 @@
                 <h2 class="mp-text-dark-blue d-lg-none mb-4" data-aos="fade-left" data-aos-offset="100"
                     data-aos-duration="1000">Own your online shopping freedom</h2>
                 <h4 class="mb-5 pe-lg-5" data-aos="fade-left" data-aos-offset="200" data-aos-duration="1000">Don't let
-                    low balance ruin your shopping experience. With Mintpay, you can
-                    buy what you want-when you want it.</h4>
+                    a low balance ruin your shopping experience. With Mintpay, you can buy what you want-when you want.</h4>
                 <a href="stores.html" class="mp-btn mp-btn--secondary" data-aos="fade-left" data-aos-offset="210"
                     data-aos-duration="1000">Shop now</a>
             </div>
@@ -174,7 +173,7 @@
         <h2 class="mp-text-light mb-4" data-aos="fade-down" data-aos-duration="1000">Have a business and<br>want to sell
             with Mintpay?</h2>
 
-        <h4 class="mp-text-light mb-5" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">Give your customers the option to pay in a way they'll love. Drive more cutomers, increase conversions and boost your sales.</h4>
+        <h4 class="mp-text-light mb-5" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">Give your customers the option to pay in a way they'll love. Gain more traffic, increase conversions and boost your sales.</h4>
 
         <a class="mp-btn" href="partner-with-us.html" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000">Partner with us</a>
     </div>
