--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -1,9 +1,6 @@
 <include src="src/layouts/head.html" locals='{"pageTitle": " Mintpay | Integrate Mintpay as a Payment Gateway"}'>
 </include>
 
-<include src="src/layouts/head.html" locals='{"pageDescription": "Add Mintpay to your online payment gateway compatible with any eCommerce platform. It is time to take your brand to a new level with buy now pay later."}'>
-</include>
-
 <section class="sub-page-header-section yellow-bg">
     <include src="src/layouts/main-header.html"></include>
     <div class="container text-center">
@@ -197,21 +194,17 @@
 
     <div id="success-message" class="container padding-6-t-b d-none">
         <div class="row">
-            <div class="modalbox success col-sm-8 col-md-6 col-lg-5 center animate">
+            <div class="modalbox success col-sm-10 col-md-8 col-lg-4 offset-sm-1 offset-md-2 offset-lg-4 animate">
                 <div class="icon">
-                    <!--add tick mark here-->
-                    <i style="font-size: 60px; color: white;" class="fi-sr-check"></i>
-                    <!---------------------->
+                    <i class="fi-sr-check"></i>
                 </div>
-                <!--/.icon-->
+                
                 <h1>Success!</h1>
                 <p>Our support team will get in
-                    <br>touch with you.</p>
+                <br>touch with you.</p>
             </div>
-            <!--/.success-->
         </div>
     </div>
-    <!--/.container-->
     <div id="partner-with-us-form" class="container">
         <h2 class="text-light mb-4 font-weight-semibold text-center">Write to us</h2>
         <h4 class="text-light text-center">Whether you are a startup or large enterprise, we would love to give your customers the flexibility they deserve. Write to us today.</h4>
