--- a/src/stores.html
+++ b/src/stores.html
@@ -1,9 +1,6 @@
 <include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Online Shopping with Buy Now Pay Late"}'>
 </include>
 
-<include src="src/layouts/head.html" locals='{"pageDescription": "Indulge in the most cost-effective and convenient online shopping experience using the Mintpay Buy Now Pay Later feature with our catalogue of partnered merchants. Our merchant partners include the best online stores in Sri Lanka. Mintpay is your ideal partner when it comes to shopping for clothes online in Sri Lanka."}'>
-</include>
-
 <section class="sub-page-header-section pink-bg">
     <include src="src/layouts/main-header.html"></include>
     <div class="container text-center">
@@ -20,10 +17,10 @@
                 <a href="#featured-block" class="filter-block__slider__item">Featured</a>
             </div>
             <div>
-                <a href="women.html/#women-block"  class="filter-block__slider__item">Women</a>
+                <a href="#women-block"  class="filter-block__slider__item">Women</a>
             </div>
             <div>
-                <a href="men.html/#men-block" class="filter-block__slider__item">Men</a>
+                <a href="#men-block" class="filter-block__slider__item">Men</a>
             </div>
             <div>
                 <a href="#beauty-block" class="filter-block__slider__item">Beauty &amp; Fragrance</a>
@@ -101,7 +98,7 @@
 
     <div class="category-block">
         <div class="container">
-            <div class="category-block__title">Women</div>
+            <div class="category-block__title" id="women-block">Women</div>
             <p>Ladies, take advantage of the selection we have on offer, pay over time and get your hands on the outfits you have been eyeing all year long!</p>
         </div>
 
@@ -163,7 +160,7 @@
 
     <div class="category-block">
         <div class="container">
-            <div class="category-block__title">Men</div>
+            <div class="category-block__title" id="men-block">Men</div>
             <p>Whether its office wear, casual wear or sports wear. Get the best deals on everything you want.</p>
         </div>
 
