--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Buy Now Pay Later With 3 Easy Instalments"}, {"pageDescription": "Enjoy peace of mind with Buy Now Pay Later. Pay in three simple instalments over 2 months and enjoy the freedom of BNPL when shopping online
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Buy Now Pay Later With 3 Easy Instalments", "pageDescription": "Enjoy peace of mind with Buy Now Pay Later. Pay in three simple instalments over 2 months and enjoy the freedom of BNPL when shopping online
 "}'>
 </include>
 
