--- a/src/stores.html
+++ b/src/stores.html
@@ -1,4 +1,4 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Online Shopping with Buy Now Pay Late"}'>
+<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Online Shopping with Buy Now Pay Late", "pageDescription": "Indulge in the most cost-effective and convenient online shopping experience using the Mintpay Buy Now Pay Later feature with our catalogue of partnered merchants. Our merchant partners include the best online stores in Sri Lanka. Mintpay is your ideal partner when it comes to shopping for clothes online in Sri Lanka"}'>
 </include>
 
 <section class="sub-page-header-section pink-bg">
