--- a/src/partner-with-us.html
+++ b/src/partner-with-us.html
@@ -99,7 +99,7 @@
         var email_error =  document.getElementById("email-input-error")
         var phone_error = document.getElementById("phone-input-error")
         var message_error = document.getElementById("message-input-error")
-
+        var submit = true;
         
 
         const email_re = /^(([^<>()[\]\\.,;:\s@"]+(\.[^<>()[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
@@ -108,41 +108,48 @@
 
 
         if (comp_name==null || comp_name==""){
-            comp_name_error.innerText = "This is a required field"
+            comp_name_error.innerText = "This is a required field";
+            submit = false;
         }
         else{
             comp_name_error.innerText = ''
         }
 
         if (comp_url==null || comp_url==""){
-            comp_url_error.innerText = "This is a required field"
+            comp_url_error.innerText = "This is a required field";
+            submit = false;
         }
         else{
             comp_url_error.innerText = ''
         }
 
         if (name==null || name==""){
-            name_error.innerText= "This is a required field"
+            name_error.innerText= "This is a required field";
+            submit = false;
         }
         else{
             name_error.innerText = ''
         }
 
         if (email==null || email==""){
-            email_error.innerText = "This is a required field"
+            email_error.innerText = "This is a required field";
+            submit = false;
         }
         else if (!email_re.test(String(email).toLowerCase())){
-            email_error.innerText = "Invalid email address"
+            email_error.innerText = "Invalid email address";
+            submit = false;
         }
         else{
             email_error.innerText = ''
         }
 
         if (phone==null || phone==""){
-            phone_error.innerText = "This is a required field"
+            phone_error.innerText = "This is a required field";
+            submit = false;
         }
         else if (!phone_re.test(String(phone))){
-            phone_error.innerText = "Invalid phone number"
+            phone_error.innerText = "Invalid phone number";
+            submit = false;
         }
         else{
             phone_error.innerText = ''
@@ -151,34 +158,43 @@
 
         if (message==null || message==""){
             message_error.innerText = "This is a required field"
+            submit = false;
         }
         else{
             message_error.innerText = ''
         }
 
+        if (submit === true){
+            var http = new XMLHttpRequest();
+            var params = {
+                'comp_name': comp_name,
+                'comp_url': comp_url,
+                'name': name,
+                'email': email,
+                'phone': phone,
+                'message': message
+            };
+            http.open('POST', URL, true);
 
+            http.setRequestHeader('Content-type', 'application/json; charset=utf-8');
 
-        var http = new XMLHttpRequest();
-        var params = {
-            'comp_name': comp_name,
-            'comp_url': comp_url,
-            'name': name,
-            'email': email,
-            'phone': phone,
-            'message': message
-        };
-        http.open('POST', URL, true);
-
-        http.setRequestHeader('Content-type', 'application/json; charset=utf-8');
-
-        http.onreadystatechange = function() {
-            if(http.readyState == 4 && http.status == 200) {
-                document.getElementById('partner-form-section').scrollIntoView();
-                document.getElementById('success-message').classList.remove('d-none');
-                document.getElementById('partner-with-us-form').classList.add('d-none');
+            http.onreadystatechange = function() {
+                if(http.readyState == 4 && http.status == 200) {
+                    document.getElementById('partner-form-section').scrollIntoView();
+                    document.getElementById('success-message').classList.remove('d-none');
+                    document.getElementById('partner-with-us-form').classList.add('d-none');
+                }
             }
+            http.send(JSON.stringify(params));
         }
-        http.send(JSON.stringify(params));
+
+        else{
+            return;
+        }
+
+
+
+        
      }
 </script>
 
