--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
     </div>
 </section>
 <section class="banner-section black-gradient padding-8-t-b">
-    <div class="container text-center">
+    <div class="container-fluid text-center">
         <div class="three-text-line d-flex flex-column flex-sm-row align-items-center justify-content-center flex-wrap">
             <h2 class="mp-text-light" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">No interest</h2>
             <div class="dot-separator d-none d-sm-block" data-aos="zoom-in" data-aos-offset="200"
