--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <div class="row h-100">
             <div class="col-12 col-md-5 d-flex flex-column justify-content-start justify-content-md-center">
                 <div class="hero-section text-center text-md-start">
-                    <h1 style="font-size: 70px;" class="mb-5 d-none d-md-block">
+                    <h1 class="mb-5 d-none d-md-block">
                         <span>Shop Now</span>.<br>
                         <span>Pay Later.</span>
                     </h1>
