html,scss file refactoring

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
-<include src="src/layouts/head.html" locals='{"pageTitle": "Mintpay | Buy Now Pay Later With 3 Easy Instalments", "pageDescription": "Enjoy peace of mind with Buy Now Pay Later. Pay in three simple instalments over 2 months and enjoy the freedom of BNPL when shopping online"}'>
+<include src="src/layouts/head.html"
+    locals='{"pageTitle": "Mintpay | Buy Now Pay Later With 3 Easy Instalments", "pageDescription": "Enjoy peace of mind with Buy Now Pay Later. Pay in three simple instalments over 2 months and enjoy the freedom of BNPL when shopping online"}'>
 </include>
 
 
@@ -13,35 +14,20 @@
                         <span>Shop Now</span>.<br>
                         <span>Pay Later.</span>
                     </h1>
-                    <h1 class="my-4 d-md-none">Shop Now.  <span>Pay Later.</span></h1>
+                    <h1 class="my-4 d-md-none">Shop Now. <span>Pay Later.</span></h1>
                 </div>
-                <div class="d-flex align-items-center position-relative d-md-none w-100" style="height: 270px;">
-
-                    <figure class="hero-video">
-                        <!-- <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}" poster="assets/video/card-slice-half.png">
-                            <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
-                            <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
-                        </video> -->
-
-                        <img src="assets/img/tiny-gif.gif" alt="">
-                    </figure>
+                <div class="hero-img hero-img--mobile d-flex align-items-center position-relative d-md-none w-100">
+                    <img src="assets/img/tiny-gif.gif" alt="">
                 </div>
                 <div class="hero-section text-center text-md-start mt-5 mt-md-0">
-                    <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5">The new way of paying is here! Pay in 3 installments with 0% interest over a period of 2 months.</h4>
+                    <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5">The new way of paying is here! Pay in 3
+                        installments with 0% interest over a period of 2 months.</h4>
                     <a class="mp-btn" href="stores.html">Shop now</a>
                 </div>
             </div>
 
-            <div class="col-12 col-md-7 d-none d-md-flex align-items-center position-relative">
-
-                <figure class="hero-video">
-                    <!-- <video autoplay muted preload="none" defaultMuted playsinline data-setup="{}" poster="assets/video/card-slice-half.png">
-                        <source src="assets/video/card-slice-half.webm" type="video/webm; codecs=vp8, vorbis" />
-                        <source src="assets/video/card-slice-half.mp4" type="video/mp4" />
-                    </video> -->
-
+            <div class="hero-img col-12 col-md-7 d-none d-md-flex align-items-center position-relative">
                     <img src="assets/img/tiny-gif.gif" alt="">
-                </figure>
             </div>
         </div>
         <div class="d-none d-lg-flex justify-content-center w-100">
@@ -49,14 +35,14 @@
         </div>
     </div>
 
-    
+
 </section>
 
 <section class="how-it-works-section padding-6-t-b">
     <div class="container">
         <div class="header-text-block text-center">
             <h2 class="mp-text-dark-blue mb-4" data-aos="fade-down">How it works</h2>
-            <h4 data-aos="fade-down">3 interest-free installments with either a debit or credit card. 
+            <h4 data-aos="fade-down">3 interest-free installments with either a debit or credit card.
             </h4>
         </div>
 
@@ -65,18 +51,21 @@
                 data-aos-duration="1000">
                 <img class=" mb-lg-4" src="assets/img/how-it-works-1.png" alt="">
                 <h3 class="step-no mb-2">01.</h3>
-                <h5 class="px-sm-4">Add your favourite items to the cart and select Mintpay as the payment option at the checkout.</h5>
+                <h5 class="px-sm-4">Add your favourite items to the cart and select Mintpay as the payment option at the
+                    checkout.</h5>
             </div>
             <div class="col-12 col-lg-4 mb-5 mb-lg-0" data-aos="flip-left" data-aos-offset="200"
                 data-aos-duration="1000">
                 <img class="mb-lg-4" src="assets/img/how-it-works-2.png" alt="">
                 <h3 class="step-no mb-2">02.</h3>
-                <h5 class="px-sm-4">Your purchase is split into 3 installments. Just pay the first installment to complete the checkout process.</h5>
+                <h5 class="px-sm-4">Your purchase is split into 3 installments. Just pay the first installment to
+                    complete the checkout process.</h5>
             </div>
             <div class="col-12 col-lg-4" data-aos="flip-left" data-aos-offset="300" data-aos-duration="1000">
                 <img class="mb-lg-4" src="assets/img/how-it-works-3.png" alt="">
                 <h3 class="step-no mb-2">03.</h3>
-                <h5 class="px-sm-4">Your order is on the way! The remaining 2 installments will automatically be charged from your card on their due dates.</h5>
+                <h5 class="px-sm-4">Your order is on the way! The remaining 2 installments will automatically be charged
+                    from your card on their due dates.</h5>
             </div>
         </div>
     </div>
@@ -94,9 +83,11 @@
             <h2 class="mp-text-light" data-aos="zoom-in" data-aos-offset="300" data-aos-duration="1000">No worries</h2>
         </div>
 
-        <h4 class="mp-text-light mb-5" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1000">You only pay what you see. It's that simple.</h4>
+        <h4 class="mp-text-light mb-5" data-aos="fade-up" data-aos-offset="300" data-aos-duration="1000">You only pay
+            what you see. It's that simple.</h4>
 
-        <a class="mp-btn" href="https://app.mintpay.lk/signup/" data-aos="fade-up" data-aos-offset="350" data-aos-duration="1000">Sign up now</a>
+        <a class="mp-btn" href="https://app.mintpay.lk/signup/" data-aos="fade-up" data-aos-offset="350"
+            data-aos-duration="1000">Sign up now</a>
     </div>
 </section>
 <section class="split-section padding-6-t-b pb-0">
@@ -115,11 +106,12 @@
                 <h2 class="mp-text-dark-blue d-lg-none mb-4" data-aos="fade-left" data-aos-offset="100"
                     data-aos-duration="1000">Own your online shopping freedom</h2>
                 <h4 class="mb-5 pe-lg-5" data-aos="fade-left" data-aos-offset="200" data-aos-duration="1000">Don't let
-                    a low balance ruin your shopping experience. With Mintpay, you can buy what you want-when you want.</h4>
+                    a low balance ruin your shopping experience. With Mintpay, you can buy what you want-when you want.
+                </h4>
                 <a href="stores.html" class="mp-btn mp-btn--secondary" data-aos="fade-left" data-aos-offset="210"
                     data-aos-duration="1000">Shop now</a>
             </div>
-            
+
         </div>
     </div>
 </section>
@@ -170,9 +162,12 @@
         <h2 class="mp-text-light mb-4" data-aos="fade-down" data-aos-duration="1000">Have a business and<br>want to sell
             with Mintpay?</h2>
 
-        <h4 class="mp-text-light mb-5" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">Give your customers the option to pay in a way they'll love. Gain more traffic, increase conversions and boost your sales.</h4>
+        <h4 class="mp-text-light mb-5" data-aos="zoom-in" data-aos-offset="100" data-aos-duration="1000">Give your
+            customers the option to pay in a way they'll love. Gain more traffic, increase conversions and boost your
+            sales.</h4>
 
-        <a class="mp-btn" href="partner-with-us.html" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000">Partner with us</a>
+        <a class="mp-btn" href="partner-with-us.html" data-aos="fade-up" data-aos-offset="200"
+            data-aos-duration="1000">Partner with us</a>
     </div>
 </section>
 
