--- a/src/press.html
+++ b/src/press.html
@@ -14,22 +14,13 @@
     <div class="container">
         <div class="press-items-grid">
             <div class="card">
-                <img src="assets/img/audacious.jpg" style="object-position: left;" class="card-img-top" alt="echelon.lk">
+                <img src="assets/img/audacious.jpg" class="card-img-top img-p-left" alt="echelon.lk">
                 <div class="card-body">
                     <h5 class="card-title">THE AUDACIOUS DUO</h5>
                     <p class="card-text">echelon.lk</p>
                     <a class="card-overlay-link" href="https://www.echelon.lk/the-audacious-duo/" target="_blank" title="read article">See more</a>
                 </div>
             </div>
-
-            <!-- <div class="card">
-                <img src="assets/img/ft-press.jpg" class="card-img-top" alt="ft.lk">
-                <div class="card-body">
-                    <h5 class="card-title">Seylan revolutionises buy now, pay later in partnership with Mintpay</h5>
-                    <p class="card-text">ft.lk</p>
-                    <a class="card-overlay-link" href="http://www.ft.lk/financial-services/Seylan-revolutionises-buy-now-pay-later-in-partnership-with-Mintpay/42-715561" target="_blank" title="read article">See more</a>
-                </div>
-            </div> -->
             
             <div class="card">
                 <img src="assets/img/ft-press.jpg" class="card-img-top" alt="seylan.lk">
