--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,10 @@
                     </h1>
                     <h1 class="my-4 d-md-none">Shop Now. <span>Pay Later.</span></h1>
                 </div>
-                <div class="hero-img hero-img--mobile d-flex align-items-center position-relative d-md-none w-100">
-                    <img src="assets/img/tiny-gif.gif" alt="">
+                <div class="d-flex align-items-center position-relative d-md-none w-100 hero-img--mobile">
+                    <div class="hero-img">
+                        <img src="assets/img/tiny-gif.gif" alt="">
+                    </div>
                 </div>
                 <div class="hero-section text-center text-md-start mt-5 mt-md-0">
                     <h4 class="mp-text-dark-blue mt-5 mt-md-0 mb-4 mb-md-5">The new way of paying is here! Pay in 3
@@ -26,8 +28,10 @@
                 </div>
             </div>
 
-            <div class="hero-img col-12 col-md-7 d-none d-md-flex align-items-center position-relative">
+            <div class="col-12 col-md-7 d-none d-md-flex align-items-center position-relative">
+                <div class="hero-img">
                     <img src="assets/img/tiny-gif.gif" alt="">
+                </div>
             </div>
         </div>
         <div class="d-none d-lg-flex justify-content-center w-100">
